docs/0.20/_sources/api/gammapy.maps.Geom.rst.txt
Geom
====

.. currentmodule:: gammapy.maps

.. autoclass:: Geom
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Geom.as_energy_true
      ~Geom.center_coord
      ~Geom.center_pix
      ~Geom.center_skydir
      ~Geom.data_shape
      ~Geom.has_energy_axis
      ~Geom.is_allsky
      ~Geom.is_flat
      ~Geom.is_image

   .. rubric:: Methods Summary

   .. autosummary::

      ~Geom.contains
      ~Geom.contains_pix
      ~Geom.coord_to_idx
      ~Geom.coord_to_pix
      ~Geom.copy
      ~Geom.crop
      ~Geom.data_nbytes
      ~Geom.downsample
      ~Geom.drop
      ~Geom.energy_mask
      ~Geom.from_hdulist
      ~Geom.get_coord
      ~Geom.get_idx
      ~Geom.pad
      ~Geom.pix_to_coord
      ~Geom.pix_to_idx
      ~Geom.replace_axis
      ~Geom.resample_axis
      ~Geom.slice_by_idx
      ~Geom.solid_angle
      ~Geom.squash
      ~Geom.to_bands_hdu
      ~Geom.to_cube
      ~Geom.to_image
      ~Geom.upsample

   .. rubric:: Attributes Documentation

   .. autoattribute:: as_energy_true
   .. autoattribute:: center_coord
   .. autoattribute:: center_pix
   .. autoattribute:: center_skydir
   .. autoattribute:: data_shape
   .. autoattribute:: has_energy_axis
   .. autoattribute:: is_allsky
   .. autoattribute:: is_flat
   .. autoattribute:: is_image

   .. rubric:: Methods Documentation

   .. automethod:: contains
   .. automethod:: contains_pix
   .. automethod:: coord_to_idx
   .. automethod:: coord_to_pix
   .. automethod:: copy
   .. automethod:: crop
   .. automethod:: data_nbytes
   .. automethod:: downsample
   .. automethod:: drop
   .. automethod:: energy_mask
   .. automethod:: from_hdulist
   .. automethod:: get_coord
   .. automethod:: get_idx
   .. automethod:: pad
   .. automethod:: pix_to_coord
   .. automethod:: pix_to_idx
   .. automethod:: replace_axis
   .. automethod:: resample_axis
   .. automethod:: slice_by_idx
   .. automethod:: solid_angle
   .. automethod:: squash
   .. automethod:: to_bands_hdu
   .. automethod:: to_cube
   .. automethod:: to_image
   .. automethod:: upsample
